# calm-shell

./: .calm  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  PACKAGING.md  README.md
.github/workflows/: c.yml  ci.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  PLUGINS.md
examples/: README.md  aliases.calm  directory.calm  environment.calm  functions.calm  history.calm  keyboard.calm  terminal.calm
examples/themes/: calm-mint.calm  calm-mint.json
packaging/aur/calm-shell/: .SRCINFO  PKGBUILD
packaging/aur/calm-shell-git/: .SRCINFO  PKGBUILD
src/: calm_format.c  calm_format.h  calm_format.rs  cli.c  cli.h  cli.rs  config.c  config.h  config.rs  git.c  git.h  git.rs  json.c  json.h  line_editor.c  line_editor.h  line_editor.rs  main.c  main.rs  repl.c  repl.h  repl.rs  theme.c  theme.h  theme_engine.rs  util.c  util.h  version.h
src/cli/: cli.c  cli.h
src/cli/commands/: config_cmd.c  config_cmd.h  doctor_cmd.c  doctor_cmd.h  plugin_cmd.c  plugin_cmd.h  profile_cmd.c  profile_cmd.h  repair_cmd.c  repair_cmd.h  shell_cmd.c  shell_cmd.h  sync_cmd.c  sync_cmd.h  theme_cmd.c  theme_cmd.h
src/commands/: config_cmd.c  config_cmd.h  config_cmd.rs  doctor.c  doctor.h  doctor.rs  mod.rs  plugin.c  plugin.h  plugin.rs  shell.c  shell.h  shell.rs  theme.rs  theme_cmd.c  theme_cmd.h
src/config/: calm_serialize.c  calm_serialize.h  calmconf.c  calmconf.h  official_plugins.c  official_plugins.h  paths.c  paths.h  plugin_loader.c  plugin_loader.h  profile.c  profile.h  repair.c  repair.h  scaffold.c  scaffold.h
src/exec/: git_status.c  git_status.h  process.c  process.h
src/shell/: alias_table.c  alias_table.h  builtins.c  builtins.h  dir_stack.c  dir_stack.h  execute.c  execute.h  repl.c  repl.h
src/term/: completion.c  completion.h  edit_buffer.c  edit_buffer.h  emulator.c  emulator.h  emulator_sync.c  emulator_sync.h  highlight.c  highlight.h  history.c  history.h  known_commands.c  known_commands.h  line_editor.c  line_editor.h  prompt.c  prompt.h  raw_terminal.c  raw_terminal.h
src/theme/: app_sync.c  app_sync.h  appearance.c  appearance.h  color_scheme.c  color_scheme.h  fastfetch_sync.c  fastfetch_sync.h  sync.c  sync.h  theme.c  theme.h
src/util/: fsutil.c  fsutil.h  strbuf.c  strbuf.h  strlist.c  strlist.h  strutil.c  strutil.h  xalloc.c  xalloc.h
tests/: CMakeLists.txt  main.c  test_alias_table.c  test_app_sync.c  test_calmconf.c  test_color_scheme.c  test_dir_stack.c  test_edit_buffer.c  test_emulator.c  test_execute.c  test_framework.h  test_history.c  test_main.c  test_profile.c  test_repair.c  test_strbuf.c  test_strutil.c  test_theme.c
