[package]
name = "calm-shell"
version = "0.1.0"
edition = "2021"
description = "Calm-shell — a calm, pastel, Arch-native interactive shell for EndeavourOS"
license = "MIT"
authors = ["yksouthx"]
repository = "https://github.com/yksouthx/calm-shell"
homepage = "https://github.com/yksouthx/calm-shell"
readme = "README.md"
keywords = ["shell", "cli", "arch-linux", "endeavouros", "repl"]
categories = ["command-line-utilities"]

[[bin]]
name = "calm"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
opt-level = 3

[dependencies]
# Pinned to versions this environment's rustc (1.75.0) can actually build —
# several crates in this dependency tree have bumped their MSRV well past
# 1.75 in recent releases. If bumping the Rust toolchain, these pins (and
# the transitive ones noted below, recorded in Cargo.lock) can likely be
# relaxed.
clap = { version = "=4.4.18", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
colored = "2.1"
anyhow = "1.0"
libc = "0.2"
# reedline itself has no MSRV problem; two of its transitive deps do —
# crossterm's `derive_more` (needed >=1.81, pinned to 2.0.0) and
# `unicode-segmentation` (needed >=1.85, pinned to 1.11.0). See Cargo.lock.
reedline = "=0.49.0"
nu-ansi-term = "0.50"
# Skim's fuzzy-matching algorithm as a standalone crate — used for Ctrl+R
# history search (see line_editor.rs's FuzzyHistoryCompleter). Small,
# well-established (skim, telescope-fzf-native, and others build on it),
# no reason to hand-roll a fuzzy scorer when this is exactly what it does.
fuzzy-matcher = "0.3"
